Fix form layout bug (Firefox) and improve form functionality

--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 
 .form-title {
@@ -47,7 +47,7 @@
 } */
 
 .form-tip {
-  padding: 0.75rem;
+  padding: 0.5rem;
   font-style: italic;
   font-size: 0.75rem;
 }
