--- a/src/components/SignIn/SignIn.css
+++ b/src/components/SignIn/SignIn.css
@@ -2,6 +2,7 @@
   padding: 3rem;
   display: flex;
   justify-content: center;
+  text-align: center;
 }
 
 .signin--form--container {
